--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "name": "custom-theater",
-  "version": "1.0.0",
-  "description": "https://townhall.hashnode.com/announcing-hashnode-hackathon-powered-by-vercel",
-  "main": "index.html",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "esbuild js/app.js --bundle --outfile=js/bundle.js --serve",
-    "build": "esbuild js/app.js --bundle --outfile=js/bundle.js",
-    "prod": "esbuild app.js --bundle --minify --sourcemap --target=chrome58,firefox57,safari11,edge16",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "canvas-confetti": "^1.3.3",
-    "esbuild": "^0.8.33",
-    "parallax-js": "^3.1.0",
-    "simple-parallax-js": "^5.6.2",
+    "next": "10.0.5",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "three": "^0.124.0"
   }
 }
